--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "setup-db": "node scripts/setup-db.js",
+    "export-db": "node scripts/export-db.js",
+    "prepare-vercel": "npm install dotenv mysql2",
+    "generate-cloud-sql": "node scripts/setup-db.js 2"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -61,7 +65,7 @@
     "ldrs": "^1.1.7",
     "legacy": "^0.0.3",
     "lucide-react": "^0.454.0",
-    "mysql2": "^3.14.0",
+    "mysql2": "^3.14.1",
     "next": "^15.3.1",
     "next-themes": "^0.4.4",
     "react": "^19",
@@ -83,6 +87,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-window": "^1.8.8",
+    "dotenv": "^16.5.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
