--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "setup-db": "node scripts/setup-db.js",
     "export-db": "node scripts/export-db.js",
     "prepare-vercel": "npm install dotenv mysql2",
-    "generate-cloud-sql": "node scripts/setup-db.js 2"
+    "generate-cloud-sql": "node scripts/setup-db.js 2",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -68,10 +69,10 @@
     "mysql2": "^3.14.1",
     "next": "^15.3.1",
     "next-themes": "^0.4.4",
-    "react": "^19",
+    "react": "^18",
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-dom": "^18",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "react-window": "^1.8.11",
@@ -84,8 +85,8 @@
   },
   "devDependencies": {
     "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/react-window": "^1.8.8",
     "dotenv": "^16.5.0",
     "postcss": "^8",
