--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "setup-db": "node scripts/setup-db.js",
+    "setup-indian-db": "node scripts/setup-indian-db.js",
     "export-db": "node scripts/export-db.js",
     "prepare-vercel": "npm install dotenv mysql2",
     "generate-cloud-sql": "node scripts/setup-db.js 2",
@@ -69,6 +70,7 @@
     "mysql2": "^3.14.1",
     "next": "^15.3.1",
     "next-themes": "^0.4.4",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "8.10.1",
